# DentalPro

./: .env.example  .gitignore  Makefile  README.md  package.json  pyproject.toml  requirements.txt
artifacts/: RPT_18_2026-02-18_meta.json  RPT_23_2026-02-18_meta.json  RPT_23_2026-02-18_native_export.xlsx  RPT_24_2026-02-18_meta.json  RPT_29_2026-02-18_meta.json  RPT_39_2026-02-18_meta.json  RPT_3_2026-02-18_meta.json  RPT_3_2026-02-18_native_export.xlsx  RPT_4_2026-02-18_meta.json  RPT_9_2026-02-18_meta.json  base_profile_and_tabs.json  dentalpro_export_empty_cards_2026_03_16.json  dentalpro_network_capture_report_empty_cards_2026_03_16.json  dentalpro_productization_readiness_master.json  dentalpro_runtime_extraction_empty_cards_2026_03_16.json  dentalpro_source_of_truth_map.json  dentalpro_superseded_vs_current_map.json  dentalpro_validation_backlog_current.json  dentalpro_verified_algorithms_registry.json  dentalpro_verified_artifacts_registry.json  dentalpro_verified_data_capabilities.json  dentalpro_verified_methods_registry.json  dentalpro_verified_reports_registry.json  dentalpro_verified_scripts_registry.json  dentalpro_verified_tooling_and_skills_registry.json  files_and_documents.json  xray-2026-01-15.json
config/: paths.json  project_settings.json
docs/: Task_Graph_Blueprint_Ultimate_Patient_Dossier.md  architecture.md  auth_runtime_readiness.md  current_assets_index.md  current_methods_manual.md  dentalpro-crm-page-observations-2026-03-09.md  dentalpro-screen-map-2026-03-09.md  dentalpro_empty_cards_forensic_disclosure_2026_03_16.md  known_limits.md  (+19 more)
(+174 files in other folders)
